--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <header class="site-header">
     <nav class="nav" aria-label="Primary">
       <a class="brand" href="index.html" aria-label="Home">DS</a>
+
       <div class="nav-links">
         <a href="work.html">Work</a>
         <a href="books.html">Books</a>
@@ -21,6 +22,12 @@
         <a href="live.html">Live</a>
         <a href="fantasy.html">Fantasy</a>
         <a href="contact.html">Contact</a>
+
+        <!-- OPEN TO WORK PILL -->
+        <a class="open-to-work" href="contact.html" aria-label="Open to work — go to contact">
+          <span class="otw-dot" aria-hidden="true"></span>
+          <span class="otw-text">Open to work</span>
+        </a>
       </div>
     </nav>
   </header>
