--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Darren Steptoe</title>
   <meta name="description" content="Darren Steptoe — film, writing, music, live. Everything in one place." />
-
-  <!-- Keep your site stylesheet -->
   <link rel="stylesheet" href="styles.css" />
-
-  <!-- GUARANTEED Open-to-work styling (overrides everything) -->
   <style>
     .open-to-work{
       display:inline-flex !important;
@@ -17,54 +13,51 @@
       gap:.55rem !important;
       padding:.38rem .82rem !important;
       border-radius:999px !important;
-
       background: rgba(34,197,94,0.14) !important;
       border: 1px solid rgba(34,197,94,0.55) !important;
-
       color: #22c55e !important;
       text-decoration:none !important;
       opacity: 1 !important;
       font-size: .85rem !important;
       line-height: 1 !important;
       white-space: nowrap !important;
-
       box-shadow: 0 0 0 rgba(34,197,94,0) !important;
-      animation: otw-glow 2.0s ease-in-out infinite !important;
     }
-
-    .open-to-work:hover{
-      background: rgba(34,197,94,0.18) !important;
-    }
-
+    .open-to-work:hover{ background: rgba(34,197,94,0.18) !important; }
     .otw-dot{
       width:.46rem !important;
       height:.46rem !important;
       border-radius:50% !important;
       background:#22c55e !important;
-      box-shadow: 0 0 12px rgba(34,197,94,0.45) !important;
       flex: 0 0 auto !important;
+      box-shadow: 0 0 10px rgba(34,197,94,0.35) !important;
+      animation: otw-dot-pulse 1.9s ease-in-out infinite !important;
     }
-
-    @keyframes otw-glow{
+    @keyframes otw-dot-pulse{
       0%{
         box-shadow:
-          0 0 0 rgba(34,197,94,0),
-          0 0 0 rgba(34,197,94,0) !important;
+          0 0 8px rgba(34,197,94,0.25),
+          0 0 0 rgba(34,197,94,0);
+        opacity: .92;
       }
-      60%{
+      55%{
         box-shadow:
-          0 0 14px rgba(34,197,94,0.35),
-          0 0 28px rgba(34,197,94,0.15) !important;
+          0 0 14px rgba(34,197,94,0.55),
+          0 0 26px rgba(34,197,94,0.18);
+        opacity: 1;
       }
       100%{
         box-shadow:
-          0 0 0 rgba(34,197,94,0),
-          0 0 0 rgba(34,197,94,0) !important;
+          0 0 8px rgba(34,197,94,0.25),
+          0 0 0 rgba(34,197,94,0);
+        opacity: .92;
       }
+    }
+    @media (prefers-reduced-motion: reduce){
+      .otw-dot{ animation: none !important; }
     }
   </style>
 </head>
-
 <body>
   <a class="skip" href="#main">Skip to content</a>
 
@@ -80,7 +73,6 @@
         <a href="fantasy.html">Fantasy</a>
         <a href="contact.html">Contact</a>
 
-        <!-- OPEN TO WORK -->
         <a class="open-to-work" href="contact.html" aria-label="Open to work — go to contact">
           <span class="otw-dot" aria-hidden="true"></span>
           <span class="otw-text">Open to work</span>
@@ -99,15 +91,6 @@
         <div class="hero-actions">
           <a class="btn" href="work.html">Enter</a>
           <a class="btn ghost" href="contact.html">Reach me</a>
-        </div>
-      </div>
-
-      <div class="shape" aria-hidden="true">
-        <div class="shape-grid">
-          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
-          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
-          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
-          <span class="dot"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span>
         </div>
       </div>
     </section>
