--- a/fantasy.html
+++ b/fantasy.html
@@ -13,9 +13,8 @@
 
   <header class="site-header">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="index.html" aria-label="Home">
-        <img src="./image_Original.jpeg" alt="Darren Steptoe" />
-      </a>
+      <a class="brand" href="index.html" aria-label="Home">DS</a>
+
       <div class="nav-links">
         <a href="work.html">Work</a>
         <a href="books.html">Books</a>
@@ -23,152 +22,129 @@
         <a href="live.html">Live</a>
         <a href="fantasy.html" aria-current="page">Fantasy</a>
         <a href="contact.html">Contact</a>
+
+        <a class="open-to-work" href="contact.html" aria-label="Open to work — go to contact">
+          <span class="otw-dot" aria-hidden="true"></span>
+          <span class="otw-text">Open to work</span>
+        </a>
       </div>
     </nav>
   </header>
 
   <main id="main">
-    <section class="section">
+    <section class="hero">
       <div class="container">
-        <div class="section-head">
-          <h1 class="page-title">Fantasy Football</h1>
-          <p class="section-note">Blitzed and Confused — league hub, payments, rules, and last season results.</p>
-        </div>
+        <p class="kicker">Blitzed and Confused</p>
+        <h1 class="title">FANTASY<br/>FOOTBALL</h1>
+        <p class="subhead">League hub: payments, rules, settings, and last season results.</p>
 
-        <div class="stack">
-          <article class="item">
-            <h3>Pay entry fee (LeagueSafe)</h3>
-            <p>
-              Entry fee: <strong>$25</strong>. Pay before the draft.
-              Payment deadline last season was <strong>9/30/25 11:59PM CST</strong> (deadline for the renewed season may differ).
-            </p>
-            <div class="item-actions">
-              <a class="btn small" href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">
-                Pay on LeagueSafe
-              </a>
-              <a class="btn small ghost" href="#rules">Read the rules</a>
-            </div>
-            <p class="micro">https://www.leaguesafe.com/join/4351949</p>
-          </article>
-
-          <article class="item">
-            <h3>Last season results</h3>
-            <p>Final placements from the most recent season snapshot:</p>
-
-            <div class="item-actions">
-              <span class="link" role="note">1st — No Malice</span>
-              <span class="link" role="note">2nd — Penei for your thoughts</span>
-              <span class="link" role="note">3rd — A Bawdy Doodle</span>
-              <span class="link" role="note">4th — Jerry Circus</span>
-              <span class="link" role="note">5th — Vegas Eaddy</span>
-              <span class="link" role="note">6th — Delulu Bears Fan</span>
-            </div>
-
-            <p class="micro">Congrats to No Malice (champion) and Penei for your thoughts (runner-up).</p>
-          </article>
-
-          <article class="item">
-            <h3>Payouts</h3>
-            <p>
-              Prize pool payouts are structured as:
-              <strong>60%</strong> to 1st, <strong>25%</strong> to 2nd, <strong>15%</strong> to 3rd.
-            </p>
-            <div class="item-actions">
-              <span class="link" role="note">1st: 60%</span>
-              <span class="link" role="note">2nd: 25%</span>
-              <span class="link" role="note">3rd: 15%</span>
-            </div>
-          </article>
+        <div class="hero-actions">
+          <a class="btn" href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">Pay on LeagueSafe</a>
+          <a class="btn ghost" href="#rules">Read the rules</a>
         </div>
       </div>
     </section>
 
-    <section id="rules" class="section alt">
+    <section class="modules">
       <div class="container">
-        <div class="section-head">
-          <h2 class="section-title">League Rules</h2>
-          <p class="section-note">Short, enforceable rules. Designed for active, competitive managers.</p>
+        <h2 class="section-title">Quick info</h2>
+
+        <div class="grid">
+          <a class="panel wide" href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">
+            <span class="panel-label">PAY ENTRY FEE (LEAGUESAFE)</span>
+            <span class="panel-meta">Entry fee: $25. Pay before the draft. LeagueSafe link: leaguesafe.com/join/4351949</span>
+          </a>
+
+          <div class="panel">
+            <span class="panel-label">PAYOUTS</span>
+            <span class="panel-meta">1st: 60% · 2nd: 25% · 3rd: 15%</span>
+          </div>
+
+          <div class="panel">
+            <span class="panel-label">LEAGUE</span>
+            <span class="panel-meta">10 teams · Redraft · 4 keepers · Half-PPR · Top 6 playoffs (Weeks 15–17)</span>
+          </div>
+
+          <div class="panel wide">
+            <span class="panel-label">LAST SEASON RESULTS</span>
+            <span class="panel-meta">
+              1st — No Malice · 2nd — Penei for your thoughts · 3rd — A Bawdy Doodle · 4th — Jerry Circus · 5th — Vegas Eaddy · 6th — Delulu Bears Fan
+            </span>
+          </div>
         </div>
 
-        <div class="stack">
-          <article class="item">
-            <h3>Format</h3>
-            <p>
-              10 teams. Redraft league with <strong>4 keepers</strong> per team. Snake draft with randomized order.
-              Half-PPR scoring. Season starts Week 1. Top 6 make playoffs (Weeks 15–17), one-week matchups each round.
-              Matchup ties are broken by <strong>bench points</strong>.
-            </p>
-          </article>
+        <div id="rules" style="height:18px"></div>
 
-          <article class="item">
-            <h3>Roster</h3>
-            <p>
-              Starters: <strong>1 QB</strong>, <strong>2 RB</strong>, <strong>2 WR</strong>, <strong>1 TE</strong>,
-              <strong>1 Flex (WR/RB/TE)</strong>, <strong>1 K</strong>, <strong>1 DEF</strong>.
-              Bench: <strong>6</strong>. IR: <strong>3</strong>.
-            </p>
-          </article>
+        <h2 class="section-title" style="margin-top:2rem;">League rules</h2>
 
-          <article class="item">
-            <h3>Transactions + waivers</h3>
-            <p>
-              Adds: max <strong>5 per week</strong>, <strong>35 per season</strong>. Trades: max <strong>10 per season</strong>.
-              Waiver period is <strong>1 day</strong>, waiver type is <strong>Waiver Budget (100)</strong>.
-              Players lock at game time.
-            </p>
-          </article>
+        <div class="grid">
+          <div class="panel wide">
+            <span class="panel-label">FORMAT</span>
+            <span class="panel-meta">
+              10 teams. Redraft league with 4 keepers per team. Snake draft with randomized order. Half-PPR scoring.
+              Season starts Week 1. Top 6 make playoffs (Weeks 15–17), one-week matchups each round.
+              Matchup ties are broken by bench points.
+            </span>
+          </div>
 
-          <article class="item">
-            <h3>Trades</h3>
-            <p>
-              Trades are reviewed/approved by commissioner. Trade deadline: <strong>November 21, 2025</strong> (date will update each season).
+          <div class="panel wide">
+            <span class="panel-label">ROSTER</span>
+            <span class="panel-meta">
+              Starters: 1 QB, 2 RB, 2 WR, 1 TE, 1 Flex (WR/RB/TE), 1 K, 1 DEF. Bench: 6. IR: 3.
+            </span>
+          </div>
+
+          <div class="panel wide">
+            <span class="panel-label">TRANSACTIONS + WAIVERS</span>
+            <span class="panel-meta">
+              Adds: max 5 per week, 35 per season. Trades: max 10 per season.
+              Waiver period: 1 day. Waiver type: Waiver Budget (100). Players lock at game time.
+            </span>
+          </div>
+
+          <div class="panel wide">
+            <span class="panel-label">TRADES</span>
+            <span class="panel-meta">
+              Trades are reviewed/approved by commissioner. Trade deadline: November 21, 2025 (date updates each season).
               In-season draft pick trades are allowed. Any collusion results in removal.
-            </p>
-          </article>
+            </span>
+          </div>
 
-          <article class="item">
-            <h3>Keepers</h3>
-            <p>
-              Up to <strong>4 keepers</strong>. Keepers lock on the date of the league draft.
-            </p>
-          </article>
+          <div class="panel wide">
+            <span class="panel-label">KEEPERS</span>
+            <span class="panel-meta">
+              Up to 4 keepers. Keepers lock on the date of the league draft.
+            </span>
+          </div>
 
-          <article class="item">
-            <h3>Conduct</h3>
-            <p>
+          <div class="panel wide">
+            <span class="panel-label">CONDUCT</span>
+            <span class="panel-meta">
               Competitive lineups required weekly. No collusion, tanking, or roster abandonment.
               Trash talk is encouraged; disrespect/harassment is not tolerated.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <div class="section-head">
-          <h2 class="section-title">Settings Snapshot</h2>
-          <p class="section-note">Quick reference (full settings remain in NFL Fantasy).</p>
+            </span>
+          </div>
         </div>
 
-        <div class="stack">
-          <article class="item">
-            <h3>League</h3>
-            <p>
-              League name: <strong>Blitzed and Confused</strong>. League ID: <strong>12709265</strong>.
-              Draft: Live, Standard, 90 seconds per pick.
-            </p>
-          </article>
+        <h2 class="section-title" style="margin-top:2rem;">Settings snapshot</h2>
 
-          <article class="item">
-            <h3>Playoffs</h3>
-            <p>6 teams. Weeks 15–17. One week per matchup.</p>
-          </article>
+        <div class="grid">
+          <div class="panel wide">
+            <span class="panel-label">LEAGUE</span>
+            <span class="panel-meta">
+              League name: Blitzed and Confused. League ID: 12709265. Draft: Live, Standard, 90 seconds per pick.
+            </span>
+          </div>
 
-          <article class="item">
-            <h3>Scoring</h3>
-            <p>Half-PPR with standard yardage/TD settings, plus defense and kicking enabled.</p>
-          </article>
+          <div class="panel">
+            <span class="panel-label">PLAYOFFS</span>
+            <span class="panel-meta">6 teams · Weeks 15–17 · 1 week per matchup</span>
+          </div>
+
+          <div class="panel">
+            <span class="panel-label">SCORING</span>
+            <span class="panel-meta">Half-PPR · Defense + kicking enabled</span>
+          </div>
         </div>
 
         <footer class="footer">
