--- a/fantasy.html
+++ b/fantasy.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fantasy Football — Darren Steptoe</title>
-  <meta name="description" content="Blitzed and Confused — league hub, payments, rules, and history." />
+  <meta name="description" content="Blitzed and Confused — payments, payouts, results, and league rules." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -13,9 +13,7 @@
 
   <header class="site-header">
     <nav class="nav" aria-label="Primary">
-      <a class="brand" href="index.html" aria-label="Home">
-        <img src="./image_Original.jpeg" alt="Darren Steptoe" />
-      </a>
+      <a class="brand" href="index.html">DS</a>
       <div class="nav-links">
         <a href="work.html">Work</a>
         <a href="books.html">Books</a>
@@ -30,159 +28,92 @@
   <main id="main">
     <section class="section">
       <div class="container">
+
         <div class="section-head">
           <h1 class="page-title">Fantasy Football</h1>
-          <p class="section-note">Blitzed and Confused — league hub, payments, rules, and last season results.</p>
+          <p class="section-note">Blitzed and Confused — league hub</p>
         </div>
 
         <div class="stack">
-          <article class="item">
-            <h3>Quick links</h3>
-            <div class="item-actions">
-              <a class="btn small" href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">
-                LeagueSafe — Pay entry fee
-              </a>
-              <a class="btn small ghost" href="#rules">League rules</a>
-              <a class="btn small ghost" href="#settings">Settings snapshot</a>
-            </div>
-            <p class="micro">LeagueSafe: https://www.leaguesafe.com/join/4351949</p>
-          </article>
 
           <article class="item">
-            <h3>Entry fee + deadline</h3>
-            <p>
-              Entry fee: <strong>$25</strong>. Pay before the draft.
-              Previous season deadline: <strong>9/30/25 11:59PM CST</strong>.
-            </p>
+            <h3>LeagueSafe</h3>
+            <p>Entry fee: <strong>$25</strong></p>
+            <div class="item-actions">
+              <a class="btn small" href="https://www.leaguesafe.com/join/4351949" target="_blank" rel="noopener noreferrer">
+                Pay on LeagueSafe
+              </a>
+            </div>
+            <p class="micro">https://www.leaguesafe.com/join/4351949</p>
           </article>
 
           <article class="item">
             <h3>Payouts</h3>
+            <p><strong>1st:</strong> 60% &nbsp;·&nbsp; <strong>2nd:</strong> 25% &nbsp;·&nbsp; <strong>3rd:</strong> 15%</p>
+          </article>
+
+          <article class="item">
+            <h3>Last Season Results</h3>
+            <ul class="links" aria-label="Final placements">
+              <li>🏆 1st — No Malice</li>
+              <li>🥈 2nd — Penei for your thoughts</li>
+              <li>🥉 3rd — A Bawdy Doodle</li>
+              <li>4th — Jerry Circus</li>
+              <li>5th — Vegas Eaddy</li>
+              <li>6th — Delulu Bears Fan</li>
+            </ul>
+          </article>
+
+          <article class="item" id="rules">
+            <h3>League Rules</h3>
+
+            <p><strong>Format:</strong> 10 teams · Redraft with <strong>4 keepers</strong> · Snake draft (randomized order) · Half-PPR</p>
+            <p><strong>Playoffs:</strong> Top 6 · Weeks 15–17 · One-week matchups each round · Ties broken by <strong>bench points</strong></p>
+
             <p>
-              Prize pool payouts:
-              <strong>60%</strong> to 1st, <strong>25%</strong> to 2nd, <strong>15%</strong> to 3rd.
+              <strong>Roster:</strong>
+              1 QB · 2 RB · 2 WR · 1 TE · 1 Flex (WR/RB/TE) · 1 K · 1 DEF · Bench 6 · IR 3
             </p>
-            <div class="item-actions">
-              <span class="link" role="note">1st: 60%</span>
-              <span class="link" role="note">2nd: 25%</span>
-              <span class="link" role="note">3rd: 15%</span>
-            </div>
-          </article>
 
-          <article class="item">
-            <h3>Last season results</h3>
-            <p>Final placements (most recent season snapshot):</p>
-
-            <div class="item-actions" aria-label="Final placements">
-              <span class="link" role="note">🏆 1st — No Malice</span>
-              <span class="link" role="note">🥈 2nd — Penei for your thoughts</span>
-              <span class="link" role="note">🥉 3rd — A Bawdy Doodle</span>
-              <span class="link" role="note">4th — Jerry Circus</span>
-              <span class="link" role="note">5th — Vegas Eaddy</span>
-              <span class="link" role="note">6th — Delulu Bears Fan</span>
-            </div>
-
-            <p class="micro">Congrats to No Malice (champion) and Penei for your thoughts (runner-up).</p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="rules" class="section alt">
-      <div class="container">
-        <div class="section-head">
-          <h2 class="section-title">League Rules</h2>
-          <p class="section-note">Short, enforceable rules. Designed for active, competitive managers.</p>
-        </div>
-
-        <div class="stack">
-          <article class="item">
-            <h3>League format</h3>
             <p>
-              10 teams. Redraft league with <strong>4 keepers</strong> per team. Snake draft with randomized order.
-              Half-PPR scoring. Season starts Week 1. Top 6 make playoffs (Weeks 15–17), one-week matchups each round.
-              Matchup ties are broken by <strong>bench points</strong>.
+              <strong>Waivers/FAAB:</strong>
+              Waiver period 1 day · Waiver budget 100 · Players lock at game time
             </p>
-          </article>
 
-          <article class="item">
-            <h3>Roster</h3>
             <p>
-              Starters: <strong>1 QB</strong>, <strong>2 RB</strong>, <strong>2 WR</strong>, <strong>1 TE</strong>,
-              <strong>1 Flex (WR/RB/TE)</strong>, <strong>1 K</strong>, <strong>1 DEF</strong>.
-              Bench: <strong>6</strong>. IR: <strong>3</strong>.
+              <strong>Transactions:</strong>
+              Adds max 5/week and 35/season · Trades max 10/season
+            </p>
+
+            <p>
+              <strong>Trades:</strong>
+              Reviewed by commissioner · Trade deadline <strong>Nov 21, 2025</strong> (updates each season) · In-season pick trades allowed · Collusion = removal
+            </p>
+
+            <p>
+              <strong>Keepers:</strong>
+              Up to 4 keepers · Keepers lock on the date of the league draft
+            </p>
+
+            <p>
+              <strong>Conduct:</strong>
+              Competitive lineups required weekly · No collusion/tanking/abandonment · Trash talk ok · Harassment not tolerated
             </p>
           </article>
 
-          <article class="item">
-            <h3>Waivers + transactions</h3>
-            <p>
-              Waivers: <strong>1 day</strong>. Waiver type: <strong>Waiver Budget (100)</strong>.
-              Players lock at game time.
-            </p>
-            <p>
-              Adds: max <strong>5 per week</strong>, <strong>35 per season</strong>.
-              Trades: max <strong>10 per season</strong>.
-            </p>
+          <article class="item" id="settings">
+            <h3>Settings Snapshot</h3>
+            <p><strong>League:</strong> Blitzed and Confused · League ID <strong>12709265</strong></p>
+            <p><strong>Draft:</strong> Live · Standard · 90 seconds per pick</p>
+            <p><strong>Scoring:</strong> Half-PPR with standard yardage/TD settings · Defense and kicking enabled</p>
           </article>
 
-          <article class="item">
-            <h3>Trades</h3>
-            <p>
-              Trades are reviewed/approved by commissioner.
-              Trade deadline: <strong>November 21, 2025</strong> (updates each season).
-              In-season draft pick trades are allowed. Any collusion results in removal.
-            </p>
-          </article>
-
-          <article class="item">
-            <h3>Keepers</h3>
-            <p>
-              Up to <strong>4 keepers</strong>. Keepers lock on the date of the league draft.
-            </p>
-          </article>
-
-          <article class="item">
-            <h3>Conduct</h3>
-            <p>
-              Competitive lineups required weekly. No collusion, tanking, or roster abandonment.
-              Trash talk is encouraged; disrespect/harassment is not tolerated.
-            </p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section id="settings" class="section">
-      <div class="container">
-        <div class="section-head">
-          <h2 class="section-title">Settings Snapshot</h2>
-          <p class="section-note">Quick reference (full settings remain in NFL Fantasy).</p>
-        </div>
-
-        <div class="stack">
-          <article class="item">
-            <h3>League</h3>
-            <p>
-              League name: <strong>Blitzed and Confused</strong>. League ID: <strong>12709265</strong>.
-              Draft: Live, Standard, 90 seconds per pick.
-            </p>
-          </article>
-
-          <article class="item">
-            <h3>Playoffs</h3>
-            <p>6 teams. Weeks 15–17. One week per matchup.</p>
-          </article>
-
-          <article class="item">
-            <h3>Scoring</h3>
-            <p>Half-PPR with standard yardage/TD settings, plus defense and kicking enabled.</p>
-          </article>
         </div>
 
         <footer class="footer">
           <p>© <span id="year"></span> Darren Steptoe</p>
         </footer>
+
       </div>
     </section>
   </main>
