--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Darren Steptoe</title>
-  <meta name="description" content="Darren Steptoe — website directory." />
-  <link rel="stylesheet" href="./style.css" />
+  <meta name="description" content="Personal website and directory for Darren Steptoe." />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
   <main class="wrap">
+
     <header class="header">
       <h1 class="title">Darren Steptoe</h1>
-      <p class="sub">Directory</p>
+      <p class="sub">Personal website</p>
     </header>
 
+    <!-- Search -->
     <section class="panel" aria-label="Site search">
       <div class="searchRow">
         <label class="srOnly" for="q">Search</label>
-        <input id="q" name="q" type="search" autocomplete="off" placeholder="Search the site..." />
+        <input
+          id="q"
+          name="q"
+          type="search"
+          autocomplete="off"
+          placeholder="Search the site..."
+        />
         <button id="clear" type="button">Clear</button>
       </div>
 
@@ -28,14 +37,33 @@
       <ul id="results" class="results" aria-live="polite"></ul>
     </section>
 
-    <section class="panel" aria-label="Directory">
+    <!-- About -->
+    <section class="panel" aria-label="About">
+      <h2 class="h2">About</h2>
+      <p>
+        This is placeholder text for an about section. It will eventually describe
+        who I am, what I work on, and why this site exists. For now, it exists only
+        to establish structure and spacing.
+      </p>
+    </section>
+
+    <!-- Navigation -->
+    <section class="panel" aria-label="Navigation">
       <h2 class="h2">Pages</h2>
-      <ul id="dir" class="links"></ul>
+      <ul class="links">
+        <li><a href="./fantasy.html">Fantasy Football</a></li>
+        <li><a href="./books.html">Books</a></li>
+        <li><a href="./work.html">Work</a></li>
+        <li><a href="./music.html">Music</a></li>
+        <li><a href="./live.html">Live</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
     </section>
 
     <footer class="footer">
       <p>© <span id="year"></span> Darren Steptoe</p>
     </footer>
+
   </main>
 
   <script src="./search.js"></script>
